# bacula

./: .gitignore  README.md
bacula/: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  CheckList  INSTALL  LICENSE  LICENSE-FAQ  LICENSE-FOSS  Makefile.in  Patchnotes  Patchnotes-2.5  README  README.AIX  ReleaseNotes  code-changes  configure  get_authors  kernstodo  kes-1.37  kes-1.38  kes-1.39  libtool  nb-1.37  patchnotes-2.5  projects  release-3-status.txt  technotes  technotes-1.39  technotes-2.1  technotes-2.3  technotes-2.5
bacula/autoconf/: .cvsignore  Make.common.in  acconfig.h  aclocal.m4  config.h.in  config.h.in.save  configure.in
bacula/autoconf/bacula-macros/: db.m4  os.m4
bacula/examples/: backup-every-other-week.txt  backup-to-cdwriter.txt  is_client_alive  nagios.txt  sample-query.sql
bacula/manpages/: Makefile.in  bacula-bat.1  bacula-bgnome-console.1  bacula-bwxconsole.1  bacula-console-gnome.1  bacula-dir.8  bacula-fd.8  bacula-sd.8  bacula-tray-monitor.1  bacula-traymonitor.1  bacula-wxconsole.1  bacula.8  bat.1  bconsole.8  bcopy.8  bextract.8  bls.8  bpluginfo.8  bregex.8  bscan.8  bsmtp.1  btape.8  btraceback.8  bwild.8  dbcheck.8
bacula/patches/: 1.36.2-win32-drive.patch  1.37.24-wrong-tape.patch  1.38.1-to-1.38.2.patch  2.2.4-ansi-label.patch  2.2.7-mysql-batch-timeout.patch  2.2.8-volstats.patch  2.4.3-migrate-log.patch  2.4.4-reload.patch  3.0.1-maxdiff.patch  patches-1.36.1  patches-1.36.2  patches-1.36.3
bacula/po/: .cvsignore  LINGUAS  Makevars  POTFILES.in  README  bacula.pot  de.gmo  de.po  es.gmo  es.po  es_AR.po  fi.po  fr.gmo  fr.po  it.gmo  it.po  nl.po  pl.po  sv.po  uk.po
bacula/release/: README  ReleaseProcedure.txt  config  git2changelog.pl  makeall  makebacularel  makedocsonly  makedocsrel  makerescuerel  makewinrel  package-list  pushtags  sign  upload
bacula/scripts/: .cvsignore  Makefile.in  bacula-ctl-dir.in  bacula-ctl-fd.in  bacula-ctl-sd.in  bacula.desktop.gnome2.in  bacula.in  bacula.man  bacula.vim  btraceback.dbx  btraceback.gdb  btraceback.in  defaultconfig  devel_bacula.in  disk-changer.in  dvd-freespace.in  dvd-handler.in  dvd-simulator.in  dvd-writepart.in  gconsole.in  logrotate.in  mtx-changer.conf  mtx-changer.in  startmysql.in
bacula/src/: .cvsignore  Makefile.in  baconfig.h  bacula.h  bc_types.h  c  ch.h  cl  console.glade  console2.glade  count-lines  dedup.h  fileopts.h  filetypes.h  host.h.in  jcr.h  streams.h  version.h
bacula/src/lib/tokyocabinet/: ChangeLog  Makefile.in  THANKS  TODO  compat.c  compat.h  configure  configure.in  myconf.c  myconf.h  tcadb.c  tcadb.h  tcamgr.c  tcatest.c  tcbdb.c  tcbdb.h  tcbmgr.c  tcbmttest.c  tcbtest.c  tchdb.c  tchdb.h  tchmgr.c  tchmttest.c  tchtest.c  tcucodec.c  tcumttest.c  tcutest.c  tcutil.c  tcutil.h  tokyocabinet.idl
bacula/updatedb/: update_mysql_tables_11_to_12.in  update_mysql_tables_6_to_7  update_mysql_tables_7_to_8  update_postgresql_tables_11_to_12.in  update_postgresql_tables_7_to_8  update_postgresql_tables_8_to_9  update_sqlite3_tables_11_to_12.in  update_sqlite3_tables_8_to_9  update_sqlite_tables_6_to_7  update_sqlite_tables_7_to_8  update_sqlite_tables_9_to_10.in
gui/: .cvsignore  Makefile  Makefile.in  README  bacula-gui.spec.in  configure
gui/autoconf/: .cvsignore  Make.common.in  config.h.in  configure.in
gui/baculum/: .gitignore  .htaccess  AUTHORS  INSTALL  LICENSE  README  index.php
gui/bimagemgr/: .cvsignore  ChangeLog  Makefile.in  README  ReleaseNotes  bacula-bimagemgr.spec.in  bimagemgr.pl  config.pm  create_cdimage_table.pl
gui/brestore/: INSTALL  README  ReleaseNotes  brestore-fr.glade  brestore.console_apps  brestore.desktop  brestore.desktop.consolehelper  brestore.desktop.xsu  brestore.glade  brestore.pl
gui/bweb/: .gitignore  INSTALL  LICENSE  MANIFEST  Makefile.PL  ReleaseNotes  UPGRADE  install_bweb  technotes-2.3  technotes-3.0
gui/debian/: brestore.dirs  brestore.menu  bweb-common.dirs  bweb.conffiles  bweb.dirs  bweb.postinst  changelog  control  rules
regress/: .cvsignore  .gitignore  CTestCustom.cmake  DartConfiguration.tcl.in  DartConfiguration.tcl.in.old  DartTestfile.txt.in  Makefile  Makefile.in  README  README.ctest  README.faketape  README.mingw32  README.vtape  all-changer-tests  all-dev-tests  all-disk-tests  all-non-root-2tape-tests  all-non-root-tape-tests  all-non-root-tests  all-root-tests  all-tape-and-disk-tests  all-tape-and-file-tests  all-tape-tests  all-tests  btape-fill-1t1d-tape  config  do_all  do_all_tests  do_disk  do_file  do_tape  encrypt-bug.txt  endtime  experimental-all  experimental-disk  experimental-disk-and-tape  experimental-disk-tape  experimental-tape  file  freebsd.conf  (+17 more)
regress/scripts/: .cvsignore  ansi-sd-tape.conf.in  bacula-dir-2client.conf.in  bacula-dir-2d.conf.in  bacula-dir-faketape.conf.in  bacula-dir-fifo.conf.in  bacula-dir-migration.conf.in  bacula-dir-strip.conf.in  bacula-dir-tape.conf.in  bacula-dir-virtual.conf.in  bacula-dir-vtape.conf.in  bacula-dir-win32-tape.conf  bacula-dir-win32-tape.conf.in  bacula-dir.conf.accurate.in  bacula-dir.conf.errors.in  bacula-dir.conf.maxruntime.in  bacula-dir.conf.maxtime.in  bacula-dir.conf.regexwhere.in  bacula-dir.conf.testrunscript.in  bacula-fd-2d.conf.in  bacula-sd-2d.conf.in  bacula-sd-2disk-drive.conf  bacula-sd-2disk-drive.conf.in  bacula-sd-2disk.conf  bacula-sd-2disk.conf.in  bacula-sd-2drive.conf.in  bacula-sd-2tape.conf.in  bacula-sd-btape.conf.in  bacula-sd-dummy.conf.in  bacula-sd-faketape.conf.in  bacula-sd-fifo.conf.in  bacula-sd-migration.conf.in  bacula-sd-tape.conf.in  bacula-sd-virtual.conf.in  bacula-sd-vtape.conf.in  bacula-sd-win32-tape.conf.in  bacula-sd.conf.in  bconsole-2d.conf.in  broken-media-bug-2-bacula-dir.conf.in  broken-media-bug-2-bacula-sd.conf.in  (+75 more)
regress/tests/: 2drive-2disk  2drive-2job-test  2drive-3pool-test  2drive-concurrent-test  2drive-incremental-2disk  2drive-incremental-2t2d-tape  2drive-incremental-2t2da-tape  2drive-incremental-2tape  2drive-incremental-changer  2drive-offline-test  2drive-swap-test  accurate-test  acl-xattr-test  action-on-purge-test  bscan-tape  (+207 more)
(+1702 files in other folders)
